Proper handling of actions/states in MotherOdin